# taichi-play

./: .gitignore  cloth_and_ball.py  flake.nix  main.py  pyproject.toml
taichi_play/: __init__.py  main.py
taichi_play/examples/: __init__.py  cloth_simulation.py  gui_widgets.py  julia_set.py  qt_triangle.py  triangle.py
