[project]
name = "taichi-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "taichi>=1.7.4",
    "click>=8.1.0",
    "PyQt6>=6.6.0",
]

[project.scripts]
taichi-play = "taichi_play.main:cli"

[tool.uv]
package = true
